{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 15,
  "lineage": "af40e8e3-0164-e0bb-6e1a-ac1b9db403dc",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b72dfb95d6457f9b",
            "arn": "arn:aws:ec2:us-east-1:160885263219:elastic-ip/eipalloc-0b72dfb95d6457f9b",
            "domain": "vpc",
            "id": "eipalloc-0b72dfb95d6457f9b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-221-40-8.compute-1.amazonaws.com",
            "public_ip": "44.221.40.8",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "myapp-dev-eip-nat"
            },
            "tags_all": {
              "Name": "myapp-dev-eip-nat"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160885263219:internet-gateway/igw-01bef8726b90193db",
            "id": "igw-01bef8726b90193db",
            "owner_id": "160885263219",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "myapp-dev-igw",
              "Project": "myapp"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myapp-dev-igw",
              "Project": "myapp"
            },
            "vpc_id": "vpc-06256897127bfc3f3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b72dfb95d6457f9b",
            "association_id": "eipassoc-07acc96212a52c281",
            "connectivity_type": "public",
            "id": "nat-0261ef4868d2ee2ec",
            "network_interface_id": "eni-0d587e3d79e129b10",
            "private_ip": "10.10.1.24",
            "public_ip": "44.221.40.8",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fea82566c09f06ea",
            "tags": {
              "Name": "myapp-dev-nat-gateway"
            },
            "tags_all": {
              "Name": "myapp-dev-nat-gateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160885263219:route-table/rtb-044cccd70f2a8b570",
            "id": "rtb-044cccd70f2a8b570",
            "owner_id": "160885263219",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0261ef4868d2ee2ec",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myapp-dev-private-rt"
            },
            "tags_all": {
              "Name": "myapp-dev-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06256897127bfc3f3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160885263219:route-table/rtb-070498c4bfb146061",
            "id": "rtb-070498c4bfb146061",
            "owner_id": "160885263219",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01bef8726b90193db",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "myapp-dev-public-rt",
              "Project": "myapp"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myapp-dev-public-rt",
              "Project": "myapp"
            },
            "timeouts": null,
            "vpc_id": "vpc-06256897127bfc3f3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bcdb140d9b8846cf",
            "region": "us-east-1",
            "route_table_id": "rtb-044cccd70f2a8b570",
            "subnet_id": "subnet-0606ad27be14f377d"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047b82645b3df929d",
            "region": "us-east-1",
            "route_table_id": "rtb-044cccd70f2a8b570",
            "subnet_id": "subnet-09fe66db4380f0dc0"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0205b039545b39111",
            "region": "us-east-1",
            "route_table_id": "rtb-070498c4bfb146061",
            "subnet_id": "subnet-0fea82566c09f06ea"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069c1ba8e25652067",
            "region": "us-east-1",
            "route_table_id": "rtb-070498c4bfb146061",
            "subnet_id": "subnet-04bd9689eddee25ee"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160885263219:subnet/subnet-0606ad27be14f377d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0606ad27be14f377d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160885263219",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "myapp-dev-private-0",
              "Project": "myapp",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myapp-dev-private-0",
              "Project": "myapp",
              "Type": "private"
            },
            "vpc_id": "vpc-06256897127bfc3f3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160885263219:subnet/subnet-09fe66db4380f0dc0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09fe66db4380f0dc0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160885263219",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "myapp-dev-private-1",
              "Project": "myapp",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myapp-dev-private-1",
              "Project": "myapp",
              "Type": "private"
            },
            "vpc_id": "vpc-06256897127bfc3f3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160885263219:subnet/subnet-0fea82566c09f06ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fea82566c09f06ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "160885263219",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "myapp-dev-public-0",
              "Project": "myapp",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myapp-dev-public-0",
              "Project": "myapp",
              "Type": "public"
            },
            "vpc_id": "vpc-06256897127bfc3f3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160885263219:subnet/subnet-04bd9689eddee25ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04bd9689eddee25ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "160885263219",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "myapp-dev-public-1",
              "Project": "myapp",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myapp-dev-public-1",
              "Project": "myapp",
              "Type": "public"
            },
            "vpc_id": "vpc-06256897127bfc3f3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160885263219:vpc/vpc-06256897127bfc3f3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-016259c04f2143437",
            "default_route_table_id": "rtb-0f173c140b35d94e9",
            "default_security_group_id": "sg-0b188006e06e48efa",
            "dhcp_options_id": "dopt-0e28b1c5234840c21",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06256897127bfc3f3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f173c140b35d94e9",
            "owner_id": "160885263219",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "myapp-dev-vpc",
              "Project": "myapp"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myapp-dev-vpc",
              "Project": "myapp"
            }
          }
        }
      ]
    }
  ]
}